# dgx-asr

./: README.md
faster-qwen3-tts/: .gitignore  DOCKERHUB_STREAMING.md  Dockerfile  README.md
faster-qwen3-tts/config/: auto_transcribe.py  benchmark_api.py  customvoice_voices.json  generate_voices.py  run_customvoice_server.py  run_server.py  run_voicedesign_server.py  voicedesign_voices.json
faster-qwen3-tts/config/speakers/: EN_M_WilliamNeural.reference.txt
faster-qwen3-tts/docker/: docker-compose.simple.yml  docker-compose.yml
faster-qwen3-tts/patches/: openai_server.patch
faster-whisper/: .gitignore  Dockerfile  docker-compose.yml  readme.md
faster-whisper/docker/: entrypoint.sh  server.py
faster-whisper/test/: transcribe.py  transcribe_cpu.py
mlx-stt/: .gitignore  AGENTS.md  LICENSE  README.md  install.sh  pyproject.toml
mlx-stt/.github/workflows/: test.yml
mlx-stt/stt/: benchmark.py  cli.py  config.py  constants.py  recommend.py  runtime.py  transcribe.py  utils.py
mlx-stt/tests/: test_benchmark.py  test_config.py  test_recommend.py  test_runtime.py  test_transcribe.py
parakeet-api/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  compose.yaml  pyproject.toml
parakeet-api/.github/workflows/: ci.yml  release.yml
parakeet-api/examples/: client_openai_sdk.py  client_requests.py
parakeet-api/src/parakeet_api/: __init__.py  config.py  download_utils.py  main.py  stt.py
parakeet-api/tests/inference/: test_e2e_inference.py  test_stt_inference.py
parakeet-api/tests/mock/: test_auth.py  test_openai_sdk.py
parakeet-asr/: .gitignore  build-and-deploy.sh  readme.md  requirements.txt
parakeet-asr/app/: __init__.py  main.py
parakeet-asr/app/app/: transcriber.py
parakeet-asr/docker/: .env.example  Dockerfile  docker-compose.yml
parakeet-mlx-server/: medical_vocabulary.txt  parakeet_server_diarization.py  requirements-diarization.txt
parakeet-mlx-server/docs/: deployment.md  diarization.md  finetuning.md
parakeet-mlx-server/scripts/: finetune_parakeet.py
parakeet-mlx-server/tests/: test_server_diarization.py
whisperx/: .dockerignore  .gitignore  Dockerfile.gpu  LICENSE  README.md
whisperx/app/: main_gpu.py
