[project]
name = "parakeet-api"
version = "0.2.1"
description = "OpenAI Whisper-compatible API endpoint for Parakeet STT models"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1.6",
    "numpy>=2.0.0",
    "pydantic-settings>=2.6.0",
    "python-multipart>=0.0.22",
    "uvicorn>=0.32.0",
    "pydub>=0.25.1",
    "platformdirs>=4.3.6",
    "sherpa-onnx>=1.12.29",
    "sherpa-onnx-bin>=1.12.29",
    "huggingface-hub>=1.7.1",
]

[project.urls]
Documentation = "https://github.com/likeablob/parakeet-api"
Source = "https://github.com/likeablob/parakeet-api"

[project.scripts]
parakeet-api = "parakeet_api.main:main"

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/.env.example",
]

[tool.hatch.build.targets.wheel]
packages = ["src/parakeet_api"]

[tool.hatch.build.targets.wheel.force-include]
".env.example" = "parakeet_api/.env.example"

[project.optional-dependencies]
mlx = [
    "mlx>=0.31.1",
    "mlx-whisper>=0.4.3",
    "parakeet-mlx",
]

[tool.uv.sources]
parakeet-mlx = { git = "https://github.com/senstella/parakeet-mlx.git" }

[dependency-groups]
dev = [
    "openai>=2.29.0",
    "pre-commit>=4.6.0",
    "pytest>=8.0.0",
    "requests>=2.32.5",
    "ruff>=0.11.0",
    "ty>=0.0.23",
]

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "B", "C4", "UP"]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ty.analysis]
allowed-unresolved-imports = [
    "mlx.**",
    "parakeet_mlx.**",
]

[tool.ty.rules]
unresolved-attribute = "ignore"

[tool.pytest.ini_options]
markers = [
    "inference: marks tests that perform actual STT inference (requires downloaded models)",
]
